--- a/sitemap.html
+++ b/sitemap.html
@@ -44,7 +44,7 @@
       <li><a href="exhibition.html" target="_blank">Выставка</a></li>
       <li><a href="exposition.html" target="_blank">Выставка 1</a></li>
       <li>==============</li>
-      <li><a href="index.html" target="_blank">Модалки</a></li>
+      <li><a href="modals.html" target="_blank">Модалки</a></li>
     </ul>
   </div>
 </body>
