--- a/technologies.html
+++ b/technologies.html
@@ -213,7 +213,54 @@
             <!-- Col -->
 
             <div class="col-12 col-lg-6 order-lg-1">
-              <div class="video">
+              <div class="tabs">
+                <ul class="tabs__nav tabs__nav--big tabs__nav--white d-flex flex-wrap">
+                  <li class="tabs__nav-item flex-center tabs__nav-item--active" data-tab="1">Видео 1</li>
+                  <li class="tabs__nav-item flex-center" data-tab="2">Видео 2</li>
+                </ul>
+                <div class="tabs__body planning__tabs-body">
+
+                  <!-- Item -->
+
+                  <div class="tabs__item active" data-tab="1">
+                    <div class="video">
+                      <div class="upping d-flex">
+                        <span class="upping__inner"><i class="i-play-small"></i>Посмотрите подробное видео</span>
+                      </div>
+                      <div class="video__box video__box--js flex-center" data-youtube="OAYfvULTmfo">
+                        <img src="img/other/video-img.png" alt="Img">
+                        <button class="video__btn flex-center">
+                          <svg viewBox="0 0 17 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15.5287 8.33229L4.60486 1.41566C2.60739 0.150922 0 1.5861 0 3.9503V18.038C0 20.4046 2.61221 21.8394 4.60944 20.5697L15.5224 13.6323C15.9742 13.3506 16.3467 12.96 16.6051 12.4969C16.8635 12.0338 16.9994 11.5133 17 10.984C17.0006 10.4547 16.866 9.93392 16.6087 9.47021C16.3514 9.00649 15.9799 8.615 15.5287 8.33229ZM14.3944 11.8687L2.10585 19.6813V2.31042L14.4017 10.0958C14.5533 10.1899 14.6782 10.3207 14.7645 10.476C14.8509 10.6313 14.8958 10.8059 14.8951 10.9833C14.8943 11.1606 14.848 11.3348 14.7603 11.4894C14.6727 11.644 14.5467 11.7739 14.3944 11.8667V11.8687Z" fill="white"/>
+                            <path d="M14.3944 11.8687L2.10585 19.6813V2.31042L14.4017 10.0958C14.5533 10.1899 14.6782 10.3207 14.7645 10.476C14.8509 10.6313 14.8958 10.8059 14.8951 10.9833C14.8943 11.1606 14.848 11.3348 14.7603 11.4894C14.6727 11.644 14.5467 11.7739 14.3944 11.8667V11.8687Z" fill="white"/>
+                          </svg>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Item -->
+
+                  <div class="tabs__item" data-tab="2">
+                    <div class="video">
+                      <div class="upping d-flex">
+                        <span class="upping__inner"><i class="i-play-small"></i>Посмотрите подробное видео</span>
+                      </div>
+                      <div class="video__box video__box--js flex-center" data-youtube="Gshl2USNC6I">
+                        <img src="img/other/video-img.png" alt="Img">
+                        <button class="video__btn flex-center">
+                          <svg viewBox="0 0 17 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15.5287 8.33229L4.60486 1.41566C2.60739 0.150922 0 1.5861 0 3.9503V18.038C0 20.4046 2.61221 21.8394 4.60944 20.5697L15.5224 13.6323C15.9742 13.3506 16.3467 12.96 16.6051 12.4969C16.8635 12.0338 16.9994 11.5133 17 10.984C17.0006 10.4547 16.866 9.93392 16.6087 9.47021C16.3514 9.00649 15.9799 8.615 15.5287 8.33229ZM14.3944 11.8687L2.10585 19.6813V2.31042L14.4017 10.0958C14.5533 10.1899 14.6782 10.3207 14.7645 10.476C14.8509 10.6313 14.8958 10.8059 14.8951 10.9833C14.8943 11.1606 14.848 11.3348 14.7603 11.4894C14.6727 11.644 14.5467 11.7739 14.3944 11.8667V11.8687Z" fill="white"/>
+                            <path d="M14.3944 11.8687L2.10585 19.6813V2.31042L14.4017 10.0958C14.5533 10.1899 14.6782 10.3207 14.7645 10.476C14.8509 10.6313 14.8958 10.8059 14.8951 10.9833C14.8943 11.1606 14.848 11.3348 14.7603 11.4894C14.6727 11.644 14.5467 11.7739 14.3944 11.8667V11.8687Z" fill="white"/>
+                          </svg>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
+              <!-- <div class="video">
                 <div class="upping d-flex">
                   <span class="upping__inner"><i class="i-play-small"></i>Посмотрите подробное видео</span>
                 </div>
@@ -226,7 +273,7 @@
                     </svg>
                   </button>
                 </div>
-              </div>
+              </div> -->
             </div>
 
           </div>
